--- a/openapi/frameworks/fastapi.mdx
+++ b/openapi/frameworks/fastapi.mdx
@@ -3,7 +3,7 @@ title: How to generate an OpenAPI document with FastAPI
 description: "Creating an OpenAPI document with FastAPI and using it to generate SDKs with Speakeasy."
 ---
 
-import { YouTube, Callout, Spotlight } from "@/mdx/components";
+import { YouTube, Callout } from "@/mdx/components";
 
 # How to generate an OpenAPI document with FastAPI
 
@@ -60,73 +60,137 @@ Let's get started with the basics – some things you probably do already.
 
 These straightforward examples are trivial but will help you better understand the three steps in the automation pipeline: How FastAPI setup influences OpenAPI documents, which, in turn, influences SDK code.
 
-<Spotlight>
-
-#### !!steps ServerConfig
+### Server Configuration
 
 This may seem obvious, but while first working with FastAPI in development, the generated docs, development server, and API operations all work out of the box without the need to manually specify your server address.
 
 However, when generating SDKs, your OpenAPI document needs to list servers.
 
-In our `app/main.py`, we added our local server as shown.
+In our `app/main.py`, we added our local server as shown:
 
-```python ! servers.py
-!from ./assets/fastapi/servers.py.txt
+```python
+from fastapi import FastAPI
+
+app = FastAPI(
+    servers=[
+        {"url": "http://127.0.0.1:8000", "description": "Local server"},
+    ],
+)
 ```
 
-#### !!steps GeneratedYaml
+This leads to the following generated output in `openapi.yaml`:
 
-This leads to the following generated output in `openapi.yaml`.
-
-```yaml ! servers_openapi.yaml
-!from ./assets/fastapi/servers_openapi.yaml
+```yaml
+# The basic server configuration in OpenAPI
+servers:
+  - description: Local server
+    url: http://127.0.0.1:8000/
+  # You can add additional servers if needed
+  # - description: Production server
+  #   url: https://api.example.com/
 ```
 
-#### !!steps AppInfo
+### Application Information
 
-In our `app/main.py`, if we have the following.
+In our `app/main.py`, if we have the following:
 
-```python ! info.py
-!from ./assets/fastapi/info.py.txt
+```python
+from fastapi import FastAPI
+
+app = FastAPI(
+    summary="A simple API to manage burgers and orders",
+    description="This API is used to manage burgers and orders in a restaurant",
+    version="0.1.0",
+    title="APItizing Burger API",
+)
 ```
 
-#### !!steps InfoYaml
+FastAPI generates the following YAML in our `openapi.yaml` file:
 
-FastAPI generates the following YAML in our `openapi.yaml` file.
-
-```yaml ! info.yaml
-!from ./assets/fastapi/openapi_info.yaml
+```yaml
+info:
+  description: This API is used to manage burgers and orders in a restaurant
+  summary: A simple API to manage burgers and orders
+  title: APItizing Burger API
+  version: 0.1.0
 ```
 
-#### !!steps RouteCustomizations
+### Route Customizations
 
 With the basics out of the way, let's look at a few more substantial recommendations.
 
-```yaml ! route-customizations.yaml
-# Route-level customizations can significantly enhance the usability of your API
-```
-
-#### !!steps TypedResponses
+### Typed Responses
 
 When developers use your generated SDK, they may wish to see what all the possible responses for an API call could be.
 
 With FastAPI, you can add additional responses to each route by specifying a response type.
 
-In our `app/main.py`, we added this abbreviated code.
+In our `app/main.py`, we added this abbreviated code:
 
-```python ! responses.py
-!from ./assets/fastapi/responses.py.txt
+```python
+from fastapi import FastAPI
+from fastapi.responses import JSONResponse
+from pydantic import BaseModel, Field
+
+class ResponseMessage(BaseModel):
+    """A response message"""
+
+    message: str = Field(description="The response message")
+
+OPENAPI_RESPONSE_BURGER_NOT_FOUND = {
+    "model": ResponseMessage,
+    "description": "Burger not found",
+}
+
+def response_burger_not_found(burger_id: int):
+    """Response for burger not found"""
+
+    return JSONResponse(
+        status_code=404,
+        content=f"Burger with id {burger_id} does not exist",
+    )
+
+class Burger(BaseModel):
+    id: int
+    name: str
+    description: str = None
+
+app = FastAPI()
+
+@app.get(
+    "/burger/{burger_id}",
+    response_model=BurgerOutput,
+    responses={404: OPENAPI_RESPONSE_BURGER_NOT_FOUND},
+    tags=["burger"],
+)
+def read_burger(burger_id: Annotated[int, Path(title="Burger ID")]):
+    """Read a burger"""
+
+    for burger in burgers_db:
+        if burger.id == burger_id:
+            return burger
+    return response_burger_not_found(burger_id)
 ```
 
-#### !!steps ResponseSchema
+FastAPI adds a schema for our specific error message to `openapi.yaml`:
 
-FastAPI adds a schema for our specific error message to `openapi.yaml`.
-
-```yaml ! response_schema.yaml
-!from ./assets/fastapi/response_schema.yaml
+```yaml
+components:
+  schemas:
+    ResponseMessage:
+      description: A response message
+      properties:
+        message:
+          description: The response message
+          title: Message
+          type: string
+      required:
+        - message
+      title: ResponseMessage
+      type: object
 ```
 
-#### !!steps OperationTags
+### Operation Tags
 
 As your API develops and grows bigger, you're likely to split it into separate files. FastAPI [provides conveniences](https://fastapi.tiangolo.com/tutorial/bigger-applications/) to help reduce boilerplate and repetition when splitting an API into multiple modules.
 
@@ -141,176 +205,364 @@ tags:
   - name: order
 ```
 
-#### !!steps TagsToOperations
+The most straightforward way to add tags is to edit each operation and add a list of tags. This example highlights the tags list:
 
-The most straightforward way to add tags is to edit each operation and add a list of tags. This example highlights the tags list.
+```python
+from fastapi import FastAPI
 
-```python ! tags_operation.py
-!from ./assets/fastapi/tags_operation.py.txt
+app = FastAPI()
+
+@app.get(
+    "/burger/{burger_id}",
+    tags=["burger"],
+)
+def read_burger(burger_id: int):
+    return {
+        "burger_id": burger_id,
+    }
 ```
 
-#### !!steps TagMetadata
+### Tag Metadata
 
 You can add metadata to your tags to further improve the developer experience.
 
 FastAPI accepts a parameter called `openapi_tags`, which we can use to add metadata, such as a description and a list of external documentation links.
 
-Here's how to add metadata to tags.
+Here's how to add metadata to tags:
 
-```python ! tag_metadata.py
-!from ./assets/fastapi/tag_metadata.py.txt
+```python
+from fastapi import FastAPI
+
+tags_metadata = [
+    {
+        "name": "burger",
+        "description": "Operations related to burgers",
+        "externalDocs": {
+            "description": "Burger external docs",
+            "url": "https://en.wikipedia.org/wiki/Hamburger",
+        },
+    },
+    {
+        "name": "order",
+        "description": "Operations related to orders",
+    },
+]
+
+app = FastAPI(
+    openapi_tags=tags_metadata,
+)
+
+@app.get(
+    "/burger/{burger_id}",
+    tags=["burger"],
+)
+def read_burger(burger_id: int):
+    return {
+        "burger_id": burger_id,
+    }
 ```
 
-#### !!steps TagsInOpenAPI
+When we add metadata to tags, FastAPI adds a top-level `tags` section to our OpenAPI document:
 
-When we add metadata to tags, FastAPI adds a top-level `tags` section to our OpenAPI document.
-
-```yaml ! tags.yaml
-!from ./assets/fastapi/tags_openapi.yaml
+```yaml
+tags:
+  - description: Operations related to burgers
+    externalDocs:
+      description: Burger external docs
+      url: https://en.wikipedia.org/wiki/Hamburger
+    name: burger
+  - description: Operations related to orders
+    name: order
 ```
 
-#### !!steps PathTags
+Each tagged path in our OpenAPI document also gets a list of tags:
 
-Each tagged path in our OpenAPI document also gets a list of tags.
-
-```yaml ! paths.yaml
-!from ./assets/fastapi/paths_tags.yaml
+```yaml
+paths:
+  /burger/{burger_id}:
+    get:
+      description: Read a burger
+      operationId: readBurger
+      summary: Read Burger
+      tags:
+        - burger
+      # ...
 ```
 
+### Operation ID Customization
 
-#### !!steps OperationIDCustomization
+When FastAPI outputs an OpenAPI document, it generates a unique OpenAPI `operationId` for each path. By default, this unique ID is generated by the FastAPI `generate_unique_id` function:
 
-When FastAPI outputs an OpenAPI document, it generates a unique OpenAPI `operationId` for each path. By default, this unique ID is generated by the FastAPI `generate_unique_id` function.
-
-```python ! operation_id.py
-!from ./assets/fastapi/operation_id_default.py.txt
+```python
+def generate_unique_id(route: "APIRoute") -> str:
+    operation_id = route.name + route.path_format
+    operation_id = re.sub(r"\W", "_", operation_id)
+    assert route.methods
+    operation_id = operation_id + "_" + list(route.methods)[0].lower()
+    return operation_id
 ```
 
-#### !!steps CustomizationOptions
+This can often lead to cumbersome and unintuitive names. To improve usability, we have two methods of customizing these generated strings:
 
-This can often lead to cumbersome and unintuitive names. To improve usability, we have two methods of customizing these generated strings.
-
-```yaml ! customization-options.yaml
-# There are multiple ways to customize operation IDs
-# 1. Using a custom generate_unique_id_function
-# 2. Specifying operation_id per operation
-```
-
-
-#### !!steps CustomUniqueIDFunction
+1. Using a custom `generate_unique_id_function`
+2. Specifying `operation_id` per operation
 
 The preferred method is to use a custom function when you generate unique IDs for paths.
 
-The example below is an illustrative function that doesn't generate guaranteed-unique IDs and doesn't handle method names without an underscore. However, it demonstrates how you can add a function that generates IDs based on an operation's method name.
+The example below is an illustrative function that doesn't generate guaranteed-unique IDs and doesn't handle method names without an underscore. However, it demonstrates how you can add a function that generates IDs based on an operation's method name:
 
-```python ! custom_id.py
-!from ./assets/fastapi/custom_id_function.py.txt
+```python
+from fastapi import FastAPI
+
+def convert_snake_case_to_camel_case(string: str) -> str:
+    """Convert snake case to camel case"""
+
+    words = string.split("_")
+    return words[0] + "".join(word.title() for word in words[1:])
+
+
+def custom_generate_unique_id_function(route: APIRoute) -> str:
+    """Custom function to generate unique id for each endpoint"""
+
+    return convert_snake_case_to_camel_case(route.name)
+
+
+app = FastAPI(
+    generate_unique_id_function=custom_generate_unique_id_function,
+)
 ```
 
-#### !!steps OperationIDPerRoute
+With FastAPI, you can also specify the `operationId` per operation. For our example, we'll add a new parameter called `operation_id` to the operation decorator:
 
-With FastAPI, you can specify the `operationId` per operation. For our example, we'll add a new parameter called `operation_id` to the operation decorator.
+```python
+from fastapi import FastAPI
 
-```python ! operation_id_route.py
-!from ./assets/fastapi/operation_id_per_route.py.txt
+app = FastAPI()
+
+@app.get(
+    "/burger/{burger_id}",
+    operation_id="readBurger",
+)
+def read_burger(burger_id: int):
+    pass
 ```
 
-#### !!steps WebhooksRealtime
+### Webhooks
 
 Starting with OpenAPI version 3.1.0, it is possible to specify webhooks for your application in OpenAPI.
 
 Here's how to add a webhook to FastAPI:
 
-```python ! webhook.py
-!from ./assets/fastapi/webhook.py.txt
+```python
+from fastapi import FastAPI
+
+app = FastAPI()
+
+
+class Order(BaseModel):
+    id: int
+    note: str
+
+
+@app.webhooks.post(
+    "order-status-changed",
+    operation_id="webhookOrderStatusChanged",
+)
+def webhook_order_status_changed(body: Order):
+    """
+    When an order status is changed, this webhook will be triggered.
+
+    The server will send a `POST` request with the order details to the webhook URL.
+    """
+    pass
 ```
 
-#### !!steps WebhooksGenerated
+FastAPI generates the following top-level `webhooks` section in `openapi.yaml`:
 
-FastAPI generates the following top-level `webhooks` section in `openapi.yaml`.
+```yaml
+webhooks:
+  order-status-changed:
+    post:
+      description:
+        "When an order status is changed, this webhook will be triggered.
 
-```yaml ! webhook.yaml
-!from ./assets/fastapi/webhook_openapi.yaml
+
+        The server will send a `POST` request with the order details to the webhook
+        URL."
+      operationId: webhookOrderStatusChanged
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Order"
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema: {}
+          description: Successful Response
+        "422":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/HTTPValidationError"
+          description: Validation Error
+      summary: Webhook Order Status Changed
 ```
 
-#### !!steps SpeakeasyIntegration
+## Speakeasy Integration
 
 Now that we have a customized OpenAPI document, we can use Speakeasy to generate SDKs based on it. Let's take a look at how the information we detailed in the OpenAPI document affects how Speakeasy generates SDKs.
 
-```yaml ! speakeasy-integration.yaml
-# Speakeasy uses the OpenAPI document to generate SDKs
-# The customizations we've made influence how the SDK code is generated
+After we added our local server information, this is how it generates in the `openapi.yaml` file:
+
+```yaml
+# This server configuration will be used by Speakeasy when generating SDKs
+openapi: 3.0.2
+info:
+  title: FastAPI Example
+  version: 0.1.0
+servers:
+  - description: Local server
+    url: http://127.0.0.1:8000/
 ```
 
-#### !!steps ServerInfoOutput
+After Speakeasy generates the SDK, this leads to the following abbreviated code in `sdk/src/openapi/sdkconfiguration.py`:
 
-After we added our local server information, this is how it generates in the `openapi.yaml` file.
+```python
+from dataclasses import dataclass
 
-```yaml ! servers_output.yaml
-!from ./assets/fastapi/servers_output.yaml
+SERVERS = [
+    'http://127.0.0.1:8000/',
+    # Local server
+]
+"""Contains the list of servers available to the SDK"""
+
+@dataclass
+class SDKConfiguration:
+    ...
+    server_url: Optional[str] = ""
+    server_idx: Optional[int] = 0
+    ...
+
+    def __post_init__(self):
+        self._hooks = SDKHooks()
+
+    def get_server_details(self) -> Tuple[str, Dict[str, str]]:
+        if self.server_url is not None and self.server_url:
+            return remove_suffix(self.server_url, "/"), {}
+        if self.server_idx is None:
+            self.server_idx = 0
+
+        return SERVERS[self.server_idx], {}
 ```
 
-#### !!steps SDKConfiguration
+You'll find calls to `SDKConfiguration.get_server_details()` when the SDK builds API URLs:
 
-After Speakeasy generates the SDK, this leads to the following abbreviated code in `sdk/src/openapi/sdkconfiguration.py`.
+```python
+# !focus(18:24)
+from dataclasses import dataclass
 
-```python ! sdk_config.py
-!from ./assets/fastapi/sdk_configuration.py.txt
+SERVERS = [
+    'http://127.0.0.1:8000/',
+    # Local server
+]
+"""Contains the list of servers available to the SDK"""
+
+@dataclass
+class SDKConfiguration:
+    ...
+    server_url: Optional[str] = ""
+    server_idx: Optional[int] = 0
+    ...
+
+    def __post_init__(self):
+        self._hooks = SDKHooks()
+
+    def get_server_details(self) -> Tuple[str, Dict[str, str]]:
+        if self.server_url is not None and self.server_url:
+            return remove_suffix(self.server_url, "/"), {}
+        if self.server_idx is None:
+            self.server_idx = 0
+
+        return SERVERS[self.server_idx], {}
 ```
 
-#### !!steps ServerDetails
+Speakeasy uses the title, summary, and descriptions we provided earlier to add helpful text to the generated SDK documentation, including comments in the SDK code. For example, in `sdk/src/sdk/sdk.py`:
 
-You'll find calls to `SDKConfiguration.get_server_details()` when the SDK builds API URLs.
+```python
+class SDK(BaseSDK):
+    r"""APItizing Burgers API: A simple API to manage burgers and orders
 
-```python ! server_details.py
-!from ./assets/fastapi/server_details.py.txt
+    This API is used to manage burgers and orders in a restaurant
+    """
 ```
 
-#### !!steps TitleAndDescription
+Speakeasy adds the version to the `SDKConfiguration` in `sdk/src/openapi/sdkconfiguration.py`. It also uses this version to construct the user agent (`user_agent`), which contains the version of the SDK, the version of the Speakeasy generator build, and the version of the OpenAPI documentation:
 
-Speakeasy uses the title, summary, and descriptions we provided earlier to add helpful text to the generated SDK documentation, including comments in the SDK code. For example, in `sdk/src/sdk/sdk.py`.
+```python
+from dataclasses import dataclass
 
-```python ! sdk_class.py
-!from ./assets/fastapi/sdk_class.py.txt
+@dataclass
+class SDKConfiguration:
+    ...
+    openapi_doc_version: str = '0.1.0'
+    user_agent: str = "speakeasy-sdk/python 0.1.0 2.484.0 0.1.0 openapi"
+    ...
 ```
 
-#### !!steps VersionInfo
+When users call your API using the generated SDK, the `user_agent` from `SDKConfiguration` is automatically added to the `user-agent` header. The `_build_request_with_client` method in `BaseSDK` constructs the HTTP request and sets the header using `headers[user_agent_header] = self.sdk_configuration.user_agent`:
 
-Speakeasy adds the version to the `SDKConfiguration` in `sdk/src/openapi/sdkconfiguration.py`. It also uses this version to construct the user agent (`user_agent`), which contains the version of the SDK, the version of the Speakeasy generator build, and the version of the OpenAPI documentation.
-
-```python ! sdk_version.py
-!from ./assets/fastapi/sdk_config_version.py.txt
+```python
+# !focus(9)
+def _build_request_with_client(
+    self,
+    ...
+    user_agent_header,
+    ...
+) -> httpx.Request:
+    ...
+    headers["Accept"] = accept_header_value
+    headers[user_agent_header] = self.sdk_configuration.user_agent
+    ...
 ```
 
-#### !!steps UserAgentHeader
-
-When users call your API using the generated SDK, the `user_agent` from `SDKConfiguration` is automatically added to the `user-agent` header. The `_build_request_with_client` method in `BaseSDK` constructs the HTTP request and sets the header using `headers[user_agent_header] = self.sdk_configuration.user_agent`.
-
-```python ! headers.py
-!from ./assets/fastapi/headers.py.txt
-```
-
-#### !!steps OperationIDIssues
+### Operation ID Issues and Solutions
 
 The unique `operation_id` generated by FastAPI does not translate well into an SDK. We need to customize the unique `operation_id` that FastAPI generates for better readability.
 
 For instance, in the operation that returns a burger by `burger_id`, the default unique ID would be `read_burger_burger__burger_id__get`. This makes its way into SDK code, leading to class names such as `ReadBurgerBurgerBurgerIDGetRequest` or function names like `read_burger_burger_burger_id_get`.
 
-Here's a usage example after generating an SDK without customizing the `operationId`.
+Here's a usage example after generating an SDK without customizing the `operationId`:
 
-```python ! without_custom.py
-!from ./assets/fastapi/without_custom_id.py.txt
+```python
+import sdk
+from sdk.models import operations
+
+s = sdk.SDK()
+
+req = operations.ReadBurgerBurgerBurgerIDGetRequest(
+    burger_id=847252,
+)
+
+res = s.burger.read_burger_burger_burger_id_get(req)
 ```
 
-#### !!steps WithCustomID
+However, after using the custom function `generate_unique_id` we defined previously, the `read_burger` operation gets a much friendlier operation ID: `readBurger`. And the usage example becomes much easier to read:
 
-However, after using the custom function `generate_unique_id` we defined previously, the `read_burger` operation gets a much friendlier operation ID: `readBurger`. And the usage example becomes much easier to read.
+```python
+import sdk
+from sdk.models import operations
 
-```python ! with_custom.py
-!from ./assets/fastapi/with_custom_id.py.txt
+s = sdk.SDK()
+
+req = operations.ReadBurgerRequest(
+    burger_id=847252,
+)
+
+res = s.burger.read_burger(req)
 ```
-
-#### !!steps SpeakeasyNameOverride
 
 In addition to the two methods described earlier for customizing the `operation_id`, there is a third way. We can add the top-level `x-speakeasy-name-override` extension to our OpenAPI document, allowing Speakeasy to override these generated names when it generates SDK code.
 
@@ -324,11 +576,11 @@ x-speakeasy-name-override:
     createBurger: addBurger
 ```
 
-#### !!steps SpeakeasyRetries
+### Adding Retry Functionality
 
 Speakeasy can generate SDKs that follow custom rules for retrying failed requests. For instance, if your server fails to return a response within a specified time, you may want your users to retry their request without clobbering your server.
 
-To add retries to SDKs generated by Speakeasy, add a top-level `x-speakeasy-retries` schema to your OpenAPI document. You can also override the retry strategy per operation by adding `x-speakeasy-retries` to each operation.
+To add retries to SDKs generated by Speakeasy, add a top-level `x-speakeasy-retries` schema to your OpenAPI document. You can also override the retry strategy per operation by adding `x-speakeasy-retries` to each operation:
 
 ```yaml ! speakeasy-retries.yaml
 # Speakeasy retries can be configured with a top-level extension
@@ -338,53 +590,278 @@ x-speakeasy-retries:
   retryConnectionErrors: true
 ```
 
-#### !!steps GlobalRetries
+To add global retries, we need to customize the schema generated by the FastAPI `get_openapi` function:
 
-To add global retries, we need to customize the schema generated by the FastAPI `get_openapi` function.
+```python
+from fastapi import FastAPI
+from fastapi.openapi.utils import get_openapi
 
-```python ! custom_openapi.py
-!from ./assets/fastapi/custom_openapi.py.txt
+app = FastAPI(
+    summary="A simple API to manage burgers and orders",
+    description="This API is used to manage burgers and orders in a restaurant",
+    version="0.1.0",
+    title="APItizing Burger API",
+)
+
+@app.get("/")
+def root():
+    return {"message": "Root"}
+
+def custom_openapi():
+    if app.openapi_schema:
+        return app.openapi_schema
+
+    openapi_schema = get_openapi(
+        title=app.title,
+        version=app.version,
+        summary=app.summary,
+        description=app.description,
+        routes=app.routes,
+    )
+
+    # Add retries
+    openapi_schema["x-speakeasy-retries"] = {
+        "strategy": "backoff",
+        "backoff": {
+            "initialInterval": 500,
+            "maxInterval": 60000,
+            "maxElapsedTime": 3600000,
+            "exponent": 1.5,
+        },
+        "statusCodes": [
+            "5XX",
+        ],
+        "retryConnectionErrors": True,
+    }
+
+    app.openapi_schema = openapi_schema
+    return app.openapi_schema
+
+
+app.openapi = custom_openapi
 ```
 
 Keep in mind, you'll need to add this customization _after_ declaring your operation routes.
 
-#### !!steps RetriesYaml
+This change adds the following top-level section to `openapi.yaml`:
 
-This change adds the following top-level section to `openapi.yaml`.
-
-```yaml ! retries.yaml
-!from ./assets/fastapi/retries_openapi.yaml
+```yaml
+x-speakeasy-retries:
+  backoff:
+    exponent: 1.5
+    initialInterval: 500
+    maxElapsedTime: 3600000
+    maxInterval: 60000
+  retryConnectionErrors: true
+  statusCodes:
+    - 5XX
+  strategy: backoff
 ```
 
-#### !!steps PerRequestRetries
+To add `x-speakeasy-retries` to a single operation, update the operation and add the `openapi_extra` parameter as follows:
 
-To add `x-speakeasy-retries` to a single operation, update the operation and add the `openapi_extra` parameter as follows.
+```python
+from fastapi import FastAPI
 
-```python ! per_request_retries.py
-!from ./assets/fastapi/per_request_retries.py.txt
+app = FastAPI()
+
+@app.get(
+    "/burger/",
+    openapi_extra={
+        "x-speakeasy-retries": {
+            "strategy": "backoff",
+            "backoff": {
+                "initialInterval": 500,
+                "maxInterval": 60000,
+                "maxElapsedTime": 3600000,
+                "exponent": 1.5,
+            },
+            "statusCodes": [
+                "5XX",
+            ],
+            "retryConnectionErrors": True,
+        }
+    },
+)
+def list_burgers():
+    return []
 ```
 
-#### !!steps AuthSecurity
+### Authentication and Security
 
 FastAPI supports several authentication mechanisms that can be easily integrated into your API.
 
-The example below demonstrates adding an API key authentication scheme to the `/burger/` endpoint of our API. We use the `APIKeyHeader` dependency to validate the API key passed in the `Authorization` header.
+The example below demonstrates adding an API key authentication scheme to the `/burger/` endpoint of our API. We use the `APIKeyHeader` dependency to validate the API key passed in the `Authorization` header:
 
-```python ! api_key_security.py
-!from ./assets/fastapi/api_key_security.py.txt
+```python
+from fastapi.security import APIKeyHeader
+
+API_KEY = "your-apitizing-api-key"
+
+header_scheme = APIKeyHeader(
+    name=API_KEY,
+    auto_error=True,
+    description="API Key for the Burger listing API. API Key should be sent as a header, with the value 'your-apitizing-api-key'",
+    scheme_name="api_key",
+)
 ```
 
-#### !!steps APIKeyUsage
+We can pass a `key` parameter to the `list_burgers` function, retrieve the API key from the header, and perform validation:
 
-We can pass a `key` parameter to the `list_burgers` function, retrieve the API key from the header, and perform validation.
+```python
+@app.get(
+    "/burger/",
+    response_model=List[BurgerOutput],
+    tags=["burger"],
+    ...
+)
+def list_burgers(key: str = Depends(header_scheme)):
+    """List all burgers"""
 
-```python ! api_key_usage.py
-!from ./assets/fastapi/api_key_usage.py.txt
+    if key != API_KEY:
+        raise HTTPException(status_code=401, detail="Invalid API Key")
+
+    return [BurgerOutput(**burger_data.dict()) for burger_data in burgers_db]
 ```
 
 Now when generating the OpenAPI document, the API key authentication scheme will be included and only required for the listing on the `/burger/` endpoint.
 
-</Spotlight>
+### Handling Form Data
+
+Form data is a common way to receive information from clients, particularly in web applications. FastAPI provides robust support for form data through its `Form` class, and it correctly documents these form fields in the OpenAPI schema.
+
+When working with form data in FastAPI, you need to use the `Form` class from the `fastapi` module. This ensures that FastAPI correctly adds the appropriate schema information to your OpenAPI document.
+
+```python
+from fastapi import FastAPI, Form
+from typing import Annotated
+
+app = FastAPI()
+
+@app.post("/burger/create/")
+async def create_burger_form(
+    name: Annotated[str, Form()],
+    description: Annotated[str, Form()],
+    price: Annotated[float, Form()]
+):
+    """Create a new burger using form data"""
+    return {
+        "name": name,
+        "description": description,
+        "price": price
+    }
+```
+
+In the OpenAPI schema, FastAPI correctly identifies this endpoint as accepting form data:
+
+```yaml
+paths:
+  /burger/create/:
+    post:
+      summary: Create Burger Form
+      operationId: createBurgerForm
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                description:
+                  type: string
+                price:
+                  type: number
+              required:
+                - name
+                - description
+                - price
+      responses:
+        "200":
+          description: Successful Response
+          content:
+            application/json:
+              schema: {}
+      tags:
+        - burger
+```
+
+When Speakeasy generates an SDK from this OpenAPI document, it will correctly handle form data submissions. The generated SDK will provide a clean interface for submitting form data:
+
+```python
+import sdk
+from sdk.models import operations
+
+s = sdk.SDK()
+
+req = operations.CreateBurgerFormRequest(
+    name="Classic Burger",
+    description="Our signature burger with special sauce",
+    price=8.99
+)
+
+res = s.burger.create_burger_form(req)
+```
+
+#### File Uploads
+
+FastAPI also supports file uploads, both as individual files or as multiple files. The OpenAPI schema will correctly document these endpoints as accepting multipart form data.
+
+```python
+from fastapi import FastAPI, File, UploadFile
+from typing import Annotated
+
+app = FastAPI()
+
+@app.post("/burger/image/")
+async def upload_burger_image(
+    burger_id: Annotated[int, Form()],
+    image: Annotated[UploadFile, File()]
+):
+    """Upload an image for a burger"""
+    contents = await image.read()
+    # Process file contents...
+    return {
+        "burger_id": burger_id,
+        "filename": image.filename,
+        "content_type": image.content_type,
+        "size": len(contents)
+    }
+```
+
+This endpoint will be documented in the OpenAPI schema with `multipart/form-data` content type, allowing Speakeasy to generate appropriate SDK code for handling file uploads.
+
+#### Advanced Form Validation
+
+For form data that needs validation beyond simple type checking, you can combine Pydantic models with the `Form` class. First, define your model with the validation rules:
+
+```python
+from pydantic import BaseModel, Field
+
+class BurgerFormData(BaseModel):
+    name: str = Field(..., min_length=3, max_length=50)
+    description: str = Field(..., min_length=10, max_length=200)
+    price: float = Field(..., gt=0, le=100)
+```
+
+Then use the model fields with form data:
+
+```python
+@app.post("/burger/create/validated/")
+async def create_burger_validated(
+    name: Annotated[str, Form()],
+    description: Annotated[str, Form()],
+    price: Annotated[float, Form()]
+):
+    burger_data = BurgerFormData(
+        name=name, 
+        description=description, 
+        price=price
+    )
+    return burger_data
+```
+
+FastAPI will generate an OpenAPI schema that includes these validation constraints, allowing SDK users to understand the requirements before submitting the form.
 
 ## Summary
 
